--- a/css/main.css
+++ b/css/main.css
@@ -718,6 +718,9 @@ input.cc-cvc-input {
 
 .form-fieldset-toggle {
   height: 25em; }
+  @media screen and (max-width: 568px) {
+    .form-fieldset-toggle {
+      height: 30em; } }
 
 #form-sign-up,
 #form-sign-in {
